--- a/pontoSaJar/src/main/java/login/TelaLogin.form
+++ b/pontoSaJar/src/main/java/login/TelaLogin.form
@@ -8,7 +8,7 @@
       <Color blue="2" green="16" red="5" type="rgb"/>
     </Property>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Cursor Padr&#xe3;o"/>
+      <Color id="Default Cursor"/>
     </Property>
     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="0" green="0" red="0" type="rgb"/>
